# libq

./: .clang-format  .hgignore  .hgtags  .mailmap  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README  README.md  boost.vsprops  cleaner.hpp  division_cases.cpp  fixed_point.sln  functor_info.hpp  no_targets.dox  normalization_cases.cpp  number.hpp  ordering_cases.cpp  product_cases.cpp  range_cases.cpp  sign_cases.cpp  static_pow.hpp  subtraction_cases.cpp  sum_cases.cpp  targets.dox
CORDIC/el-functions/: arccos.inl
CORDIC/lookup-table/: arctan_lut.hpp  arctanh_lut.inl
Unit-tests/: Unit-tests.vcproj  product_cases.cpp  range_cases.cpp  subtraction_cases.cpp
details/: arithmetics.inl  bounds.inl  normalization.inl
examples/: acos_example.cpp  unroll_example.cpp
fixed_point/: sum_info.hpp
fixed_point/CORDIC/lookup-table/: arctan_lut.inl
include/: arithmetics_safety.hpp  as_native_proxy.hpp  diff_of.hpp  fixed_point.hpp  loop_unroller.hpp  product_of.hpp  quotient_of.hpp  static_pow.hpp  sum_of.hpp  type_promotion.hpp
include/CORDIC/: acos.inl  acosh.inl  asin.inl  asinh.inl  atan.inl  atanh.inl  cos.inl  cosh.inl  exp.inl  log.inl  sin.inl  sinh.inl  sqrt.inl  tan.inl  tanh.inl
include/CORDIC/lut/: arctan_lut.inl  arctanh_lut.inl  circular_scales.inl  hyperbolic_scale.inl  inv_pow2_lut.inl  lut.hpp  pow2_lut.inl
include/details/: ceil.inl  div_of.inl  fabs.inl  floor.inl  fmod.inl  mult_of.inl  numeric_limits.inl  remainder.inl  round.inl  sign.inl  sum_of.inl  type_traits.inl
include/libq/: arithmetics_safety.hpp  fixed_point.hpp  type_promotion.hpp
include/libq/CORDIC/: all.hpp  asinh.hpp  atan.hpp  cos.hpp  cosh.hpp  exp.hpp  log.hpp  sinh.hpp  sqrt.hpp  tan.hpp
include/libq/CORDIC/lut/: all.hpp  arctan_lut.hpp  arctanh_lut.hpp  hyperbolic_scale.hpp  inv_pow2_lut.hpp  lut.hpp  pow2_lut.hpp
include/libq/details/: all.hpp  fabs.hpp  fixed_point_common.hpp  fmod.hpp  loop_unroller.hpp  numeric_limits.hpp  round.hpp  sign.hpp  sum_traits.hpp  type_traits.hpp
lib/: diff_info.hpp  number.hpp  product_info.hpp  quotient_info.hpp  static_pow.hpp
lib/CORDIC/: cordic.inl
lib/CORDIC/lookup-table/: arctanh_lut.hpp
lib/details/: arithmetics.inl  bounds.inl  ordering.inl
libq/: arithmetics_safety.hpp  fixed_point.hpp  loop_unroller.hpp  type_promotion.hpp
libq/CORDIC/: acos.hpp  acos.inl  acosh.hpp  acosh.inl  asin.hpp  asin.inl  asinh.hpp  asinh.inl  atan.hpp  atan.inl  atanh.hpp  atanh.inl  cos.hpp  cos.inl  cosh.hpp  cosh.inl  exp.hpp  exp.inl  log.hpp  log.inl  sin.hpp  sin.inl  sinh.hpp  sinh.inl  sqrt.hpp  sqrt.inl  tan.hpp  tan.inl  tanh.hpp  tanh.inl
libq/CORDIC/lut/: arctan_lut.hpp  arctan_lut.inl  arctanh_lut.hpp  arctanh_lut.inl  circular_scales.hpp  circular_scales.inl  hyperbolic_scale.hpp  hyperbolic_scale.inl  inv_pow2_lut.hpp  inv_pow2_lut.inl  lut.hpp  pow2_lut.hpp  pow2_lut.inl
libq/details/: ceil.hpp  ceil.inl  div_of.hpp  div_of.inl  fabs.hpp  fabs.inl  fixed_point_common.hpp  floor.hpp  floor.inl  fmod.hpp  fmod.inl  loop_unroller.hpp  mult_of.hpp  mult_of.inl  numeric_limits.hpp  numeric_limits.inl  remainder.hpp  remainder.inl  round.hpp  round.inl  sign.hpp  sign.inl  sum_traits.hpp  sum_traits.inl  type_traits.hpp  type_traits.inl
scripts/: cpplint.py
src/: as_native_proxy.hpp  diff.hpp  diff_info.hpp  fixed_point.hpp  get_.hpp  number.hpp  overflow_policy.hpp  product.hpp  product_info.hpp  quotient.hpp  quotient_info.hpp  sign_info.hpp  sum.hpp  sum_info.hpp  sum_of.hpp  underflow_policy.hpp
src/CORDIC/: acos.inl  arccos.inl  arccosh.inl  arcsin.inl  arcsinh.inl  arctan.inl  arctanh.inl  asin.inl  asinh.inl  atan.inl  atanh.inl  cordic.hpp  cos.inl  cosh.inl  exp.inl  log.inl  sin.inl  sinh.inl  sqrt.inl  sqrt1.inl  tan.inl  tanh.inl
src/CORDIC/lut/: arctan_lut.hpp  arctan_lut.inl  arctanh_lut.inl  circular_scales.inl  hyperbolic_scale.inl  hyperbolic_scales.inl  inv2roots_lut.inl  inv_pow2_lut.inl  log2_lut.inl  lut.hpp  pow2_lut.inl
src/details/: arithmetics.inl  bounds.inl  ceil.inl  fabs.inl  floor.inl  fmod.inl  normalization.inl  numeric_limits.inl  round.inl
test/msvc/: fixed_point.natvis
test/msvc/props/: bin.props  boost.props
test/msvc12/: obj.props  unit_tests.vcxproj  unit_tests.vcxproj.filters
test/msvc12/scripts/: astyle.options
tests/: CMakeLists.txt  as_native_cases.cpp  example.cpp  precision.cpp  range.cpp
tests/msvc/: unit_tests.sln  unit_tests.vcxproj  unit_tests.vcxproj.filters
tests/msvc12/: unit_tests.sln  unit_tests.vcxproj  unit_tests.vcxproj.filters
tests/msvc12/accessories_for_msvc/: astyle.cfg
tests/msvc12/scripts/: cpplint.py
tests/src/: as_native_cases.cpp  precision.cpp  range.cpp
unit_tests/: division_cases.cpp  normalization_cases.cpp  ordering_cases.cpp  precision.cpp  product_cases.cpp  range.cpp  range_cases.cpp  sign_cases.cpp  subtraction_cases.cpp  sum_cases.cpp
unit_tests/msvc/: boost.props  fixed_point.natvis  unit_tests.vcxproj
unit_tests/src/: as_native_cases.cpp  division_cases.cpp  precision.cpp  range.cpp
unit_tests/vs2010/: boost.props  unit_tests.vcxproj  unit_tests.vcxproj.filters
verbose-output/: rule.hpp
verbose-output/Unit-tests/: Unit-tests.vcproj  integrals_rule_test.cpp  numerals_rule_test.cpp
verbose-output/rules/: empty_rule.hpp  integrals_rule.hpp  numerals_rule.hpp
verbose-output/rules/details/: integrals_rule.inl  numerals_rule.inl
vs2008/: unit_tests.vcproj
vs2010/: unit_tests.sln  unit_tests.vcxproj
